--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -153,6 +153,7 @@ jobs:
           name: macOS-${{ github.event.inputs.macos_version }}-${{ steps.fetch_installers.outputs.version }}-ISO
           path: "*.iso"
           compression-level: 0
+          retention-days: 1
 
       - name: Summary
         run: |
