update README and build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,7 +105,7 @@ jobs:
           # Set variables
           ISO_NAME="macOS_${{ github.event.inputs.macos_version }}_${{ steps.fetch_installers.outputs.version }}"
           ISO_NAME="${ISO_NAME// /_}"
-          SPARSE_IMAGE="$HOME/${ISO_NAME}.sparseimage"
+          SPARSE_IMAGE="/tmp/${ISO_NAME}.sparseimage"
           ISO_FILE="${GITHUB_WORKSPACE}/${ISO_NAME}.iso"
           VOLUME_NAME="${ISO_NAME}_installer"
           INSTALLER_PATH="/Applications/Install macOS ${{ github.event.inputs.macos_version }}.app"
@@ -124,11 +124,14 @@ jobs:
           # Detach volume
           echo "Detaching volume..."
           INSTALLER_NAME="Install macOS ${{ github.event.inputs.macos_version }}"
-          hdiutil detach "/Volumes/$INSTALLER_NAME" -force || true
+          if hdiutil detach "/Volumes/$INSTALLER_NAME" || hdiutil detach "/Volumes/$INSTALLER_NAME" -force; then
+            echo "Volume detached successfully"
+          else
+            echo "Failed to detach volume"
+          fi
           sleep 2
           
           # Create hybrid ISO
-          echo "Creating hybrid ISO..."
           hdiutil makehybrid -hfs -udf -o "$ISO_FILE" "$SPARSE_IMAGE"
           
           # Clean up
@@ -142,16 +145,17 @@ jobs:
             echo "ISO file: $ISO_FILE"
             echo "ISO size: $ISO_SIZE"
             echo "iso_size=$ISO_SIZE" >> $GITHUB_OUTPUT
+            echo "iso_file=$ISO_FILE" >> $GITHUB_OUTPUT
           else
             echo "Error: ISO file not created"
             exit 1
           fi
 
       - name: Upload ISO artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v5
         with:
           name: macOS-${{ github.event.inputs.macos_version }}-${{ steps.fetch_installers.outputs.version }}-ISO
-          path: "*.iso"
+          path: ${{ steps.create_iso.outputs.iso_file }}
           compression-level: 0
           retention-days: 3
 
@@ -159,10 +163,8 @@ jobs:
         run: |
           echo "## Build Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Successfully built macOS installer ISO" >> $GITHUB_STEP_SUMMARY
+          echo "Successfully built **macOS ${{ github.event.inputs.macos_version }} ${{ steps.fetch_installers.outputs.version }}** ISO" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**macOS Version:** ${{ github.event.inputs.macos_version }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Version Number:** ${{ steps.fetch_installers.outputs.version }}" >> $GITHUB_STEP_SUMMARY
           echo "**ISO Size:** ${{ steps.create_iso.outputs.iso_size }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Download the ISO from the artifacts section above." >> $GITHUB_STEP_SUMMARY
+          echo "Download the ISO from the artifacts section below." >> $GITHUB_STEP_SUMMARY
