--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build macOS Installer ISO image
+name: Build macOS Installer ISO/DMG image
 
 on:
   workflow_dispatch:
@@ -17,13 +17,20 @@ on:
           - 'Catalina'
           - 'Mojave'
           - 'High Sierra'
+      image_format:
+        description: 'Select image format, iso for VM, dmg for burn to USB drive'
+        required: true
+        type: choice
+        options:
+          - 'iso'
+          - 'dmg'
       specific_version:
-        description: 'Specific version number (optional, e.g., 15.0.1)'
+        description: 'Optional: Specific version number, e.g., 15.7.1'
         required: false
         type: string
 
 jobs:
-  build-iso:
+  build-installer:
     runs-on: macos-15-intel
     timeout-minutes: 120
     
@@ -54,7 +61,7 @@ jobs:
           else
             # Get latest version for selected macOS
             INSTALLER_VERSION=$(grep "${{ github.event.inputs.macos_version }}" installers.txt | head -1 | sed -n 's/.*Version: \([^,]*\).*/\1/p')
-            echo "Found latest version: $INSTALLER_VERSION"
+            echo "Found latest ${{ github.event.inputs.macos_version }} version: $INSTALLER_VERSION"
           fi
           
           if [ -z "$INSTALLER_VERSION" ]; then
@@ -79,7 +86,7 @@ jobs:
             else
               RETRY_COUNT=$((RETRY_COUNT + 1))
               echo "Download failed. Retry $RETRY_COUNT of $MAX_RETRIES..."
-              sleep 10
+              sleep 5
             fi
           done
           
@@ -98,6 +105,7 @@ jobs:
           echo "Installer found at: $INSTALLER_PATH"
 
       - name: Create ISO
+        if: github.event.inputs.image_format == 'iso'
         id: create_iso
         run: |
           echo "Creating ISO for macOS ${{ github.event.inputs.macos_version }}"
@@ -122,7 +130,7 @@ jobs:
           sudo "$INSTALLER_PATH/Contents/Resources/createinstallmedia" --volume "/Volumes/$VOLUME_NAME" --nointeraction
           
           # Should wait for a few seconds
-          sleep 5
+          sync && sleep 5
 
           # Detach volume
           echo "Detaching volume..."
@@ -135,37 +143,138 @@ jobs:
           sleep 2
           
           # Create hybrid ISO
+          echo "Creating hybrid ISO..."
           hdiutil makehybrid -hfs -udf -o "$ISO_FILE" "$SPARSE_IMAGE"
-          
-          # Clean up
-          echo "Cleaning up temporary files..."
-          rm -f "$SPARSE_IMAGE"
           
           # Show ISO info and set output
           if [ -f "$ISO_FILE" ]; then
             ISO_SIZE=$(du -h "$ISO_FILE" | cut -f1)
+            echo ""
+            echo "========================================="
             echo "ISO created successfully!"
-            echo "ISO file: $ISO_FILE"
             echo "ISO size: $ISO_SIZE"
-            echo "iso_size=$ISO_SIZE" >> $GITHUB_OUTPUT
-            echo "iso_file=$ISO_FILE" >> $GITHUB_OUTPUT
+            echo "========================================="
+            echo ""
+            echo "image_size=$ISO_SIZE" >> $GITHUB_OUTPUT
+            echo "image_file=$ISO_FILE" >> $GITHUB_OUTPUT
+            echo "image_name=${ISO_NAME}.iso" >> $GITHUB_OUTPUT
           else
             echo "Error: ISO file not created"
             exit 1
           fi
 
+      - name: Create DMG
+        if: github.event.inputs.image_format == 'dmg'
+        id: create_dmg
+        run: |
+          echo "Creating macOS ${{ github.event.inputs.macos_version }} DMG image"
+          
+          # Set variables
+          DMG_NAME="macOS_${{ github.event.inputs.macos_version }}_${{ steps.fetch_installers.outputs.version }}"
+          DMG_NAME="${DMG_NAME// /_}"
+          DMG_FILE="${GITHUB_WORKSPACE}/${DMG_NAME}.dmg"
+          VOLUME_NAME="Install_Temp"
+          INSTALLER_PATH="/Applications/Install macOS ${{ github.event.inputs.macos_version }}.app"
+          
+          echo "DMG will be created at: $DMG_FILE"
+          echo "Using installer at: $INSTALLER_PATH"
+          
+          # Step 1: Create a 20GB disk image and attach it
+          echo "Step 1: Creating 20GB DMG disk image..."
+          hdiutil create -size 20g -volname "$VOLUME_NAME" -fs HFS+ -type UDIF -attach "$DMG_FILE"
+          
+          # Get the disk identifier
+          DISK_ID=$(diskutil list | grep "$VOLUME_NAME" | head -1 | awk '{print $NF}' | sed 's/s[0-9]*$//')
+          
+          # Step 2: Create install media
+          echo "Step 2: Creating install media ..."
+          sudo "$INSTALLER_PATH/Contents/Resources/createinstallmedia" --volume "/Volumes/$VOLUME_NAME" --nointeraction
+          
+          sync && sleep 5
+          
+          # Step 3: Check minimum size requirements
+          echo "Step 3: Check minimum size requirements..."
+          INSTALLER_PARTITION="/dev/${DISK_ID}s2"
+          diskutil resizeVolume "$INSTALLER_PARTITION" limits | tee resize_limits.txt
+          
+          # Extract the byte value from parentheses
+          MIN_SIZE=$(grep "Minimum (constrained by file usage)" resize_limits.txt | sed -n 's/.*(\([0-9]*\) Bytes).*/\1/p')
+          echo "Minimum size: $MIN_SIZE bytes"
+          
+          # Step 4: Consolidate installer data by adding a dummy partition, this forces macOS to move all data to the front of the partition
+          echo "Step 4: Resizing and consolidating data..."
+          diskutil resizeVolume "$INSTALLER_PARTITION" "${MIN_SIZE}B" HFS+ Dummy 0
+          
+          sync && sleep 5
+          
+          # Step 5: Remove dummy partition, leaving free space at the end
+          echo "Step 5: Removing dummy partition..."
+          DUMMY_PARTITION=${DISK_ID}s3
+          diskutil eraseVolume free free "$DUMMY_PARTITION"
+          
+          sync && sleep 5
+          
+          # Step 6: Expand installer partition back
+          echo "Step 6: Expanding installer partition..."
+          diskutil resizeVolume "$INSTALLER_PARTITION" 0
+          
+          sync && sleep 2
+          
+          # Step 7: Detach the disk
+          echo "Step 7: Detaching disk..."
+          hdiutil detach "$DISK_ID" || hdiutil detach "$DISK_ID" -force
+          
+          sleep 2
+          
+          # Step 8: Optimize DMG size
+          echo "Step 8: Optimizing DMG size..."
+          hdiutil resize -size min "$DMG_FILE"
+          
+          # Show final DMG info
+          if [ -f "$DMG_FILE" ]; then
+            DMG_SIZE=$(du -h "$DMG_FILE" | cut -f1)
+            echo ""
+            echo "========================================="
+            echo "Optimize DMG created successfully!"
+            echo "DMG size: $DMG_SIZE"
+            echo "========================================="
+            echo ""
+            echo "image_size=$DMG_SIZE" >> $GITHUB_OUTPUT
+            echo "image_file=$DMG_FILE" >> $GITHUB_OUTPUT
+            echo "image_name=${DMG_NAME}.dmg" >> $GITHUB_OUTPUT
+          else
+            echo "Error: DMG file not created"
+            exit 1
+          fi
+
       - name: Upload ISO artifact
+        if: github.event.inputs.image_format == 'iso'
         uses: actions/upload-artifact@v5
         with:
           name: macOS-${{ github.event.inputs.macos_version }}-${{ steps.fetch_installers.outputs.version }}-ISO
-          path: ${{ steps.create_iso.outputs.iso_file }}
+          path: ${{ steps.create_iso.outputs.image_file }}
+          compression-level: 0
+          retention-days: 3
+
+      - name: Upload DMG artifact
+        if: github.event.inputs.image_format == 'dmg'
+        uses: actions/upload-artifact@v5
+        with:
+          name: macOS-${{ github.event.inputs.macos_version }}-${{ steps.fetch_installers.outputs.version }}-DMG
+          path: ${{ steps.create_dmg.outputs.image_file }}
           compression-level: 0
           retention-days: 3
 
       - name: Summary
         run: |
-          echo "Successfully built **macOS ${{ github.event.inputs.macos_version }} ${{ steps.fetch_installers.outputs.version }}** ISO" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ github.event.inputs.image_format }}" == "iso" ]; then
+            echo "## Successfully built macOS ${{ github.event.inputs.macos_version }} ${{ steps.fetch_installers.outputs.version }} ISO" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "**Image Size:** ${{ steps.create_iso.outputs.image_size }}" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "## Successfully built macOS ${{ github.event.inputs.macos_version }} ${{ steps.fetch_installers.outputs.version }} DMG" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "**Image Size:** ${{ steps.create_dmg.outputs.image_size }}" >> $GITHUB_STEP_SUMMARY
+          fi
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**ISO Size:** ${{ steps.create_iso.outputs.iso_size }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Download the ISO from the artifacts section below." >> $GITHUB_STEP_SUMMARY
+          echo "Download the installer from the artifacts section below." >> $GITHUB_STEP_SUMMARY
