--- a/.github/workflows/build-recovery.yml
+++ b/.github/workflows/build-recovery.yml
@@ -169,7 +169,6 @@ jobs:
             echo "ISO created successfully!"
             echo "ISO file: $ISO_FILE"
             echo "ISO size: $ISO_SIZE"
-            echo "iso_size=$ISO_SIZE" >> $GITHUB_OUTPUT
             echo "iso_file=$ISO_FILE" >> $GITHUB_OUTPUT
           else
             echo "Error: ISO file not created"
@@ -213,7 +212,5 @@ jobs:
       - name: Summary
         run: |
           echo "Successfully built **macOS ${{ steps.version_info.outputs.version_name }} Recovery** ISO" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**ISO Size:** ${{ steps.create_iso.outputs.iso_size }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Download the Recovery ISO from the artifacts section below." >> $GITHUB_STEP_SUMMARY
+          echo "> [!Tip]" >> $GITHUB_STEP_SUMMARY
+          echo "> Enable [Cloudflare WARP](https://one.one.one.one/) for faster downloads." >> $GITHUB_STEP_SUMMARY
